docs(verification): P5-A AC5.8 stutter runs, AC6.6 JVM evidence, findings F2-F4
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BzjDikL2wqunaSiMjefimU